--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit>=1.32.0
+streamlit-webrtc>=0.47.0
 requests>=2.31.0
 numpy>=1.24.0
 opencv-python-headless>=4.8.0
-Pillow>=10.2.0
+Pillow>=9.5.0
 plotly>=5.18.0
 pandas>=2.0.0
+av>=10.0.0
